// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form does not render errors for fields that do not have errors 1`] = `
<form id="test-form">
  <div aria-labelledby="test-form-summary-title"
       class="govuk-error-summary"
       role="alert"
       tabindex="-1"
  >
    <h2 class="govuk-error-summary__title"
        id="test-form-summary-title"
    >
      There is a problem
    </h2>
    <div class="govuk-error-summary__body">
      <ul class="govuk-list govuk-error-summary__list">
        <li>
          <a href="#test-form-firstName">
            First name is required
          </a>
        </li>
      </ul>
    </div>
  </div>
  The form
  <button type="submit">
    Submit
  </button>
</form>
`;

exports[`Form renders error summary from form errors when form is submitted 1`] = `
<form id="test-form">
  <div aria-labelledby="test-form-summary-title"
       class="govuk-error-summary"
       role="alert"
       tabindex="-1"
  >
    <h2 class="govuk-error-summary__title"
        id="test-form-summary-title"
    >
      There is a problem
    </h2>
    <div class="govuk-error-summary__body">
      <ul class="govuk-list govuk-error-summary__list">
        <li>
          <a href="#test-form-firstName">
            First name is required
          </a>
        </li>
        <li>
          <a href="#test-form-lastName">
            Last name is required
          </a>
        </li>
      </ul>
    </div>
  </div>
  The form
  <button type="submit">
    Submit
  </button>
</form>
`;

exports[`Form renders submit error 1`] = `
<form id="test-form">
  <div aria-labelledby="test-form-summary-title"
       class="govuk-error-summary"
       role="alert"
       tabindex="-1"
  >
    <h2 class="govuk-error-summary__title"
        id="test-form-summary-title"
    >
      There is a problem
    </h2>
    <div class="govuk-error-summary__body">
      <ul class="govuk-list govuk-error-summary__list">
        <li>
          <a href="#test-form-submit">
            Something went wrong
          </a>
        </li>
      </ul>
    </div>
  </div>
  The form
  <button type="submit">
    Submit
  </button>
</form>
`;
